--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,10 @@ button {
     height: 50px;
   }
 
+  .header-right {
+    margin-right: 15px;
+}
+
   .logo-text-wrapper {
     margin-right: 0px;
   }
@@ -154,7 +158,7 @@ button {
     /* font-size: 25px; */
   }
 
-  .delete-icon, .edit-icon, .clear-icon, .line-icon, .listpal-board-logo {
+  .listpal-board-logo {
     display: none !important;
   }
 
@@ -167,11 +171,16 @@ button {
   }
 
   .basic-multi-select {
-    margin-top: 20px;
-    width: 80%;
+    /* margin-top: 20px; */
+    /* width: 80%; */
   }
 
   #addCardButton {
     min-width: 0px;
+  }
+
+  .board-filter-actions-wrapper {
+    margin-top: 20px;
 }
+
 }
