--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -138,3 +138,23 @@ hr {
     padding-left: 20px;
 }
 
+.card-menu-dots {
+    opacity: 0.6;
+    width: 28px;
+    margin-right: 20px;
+    margin-top: 10px;
+    padding: 8px;
+    border-radius: 10px;
+    /* border-top-left-radius: 10px;
+    border-top-right-radius: 10px; */
+}
+
+.card-menu-dots:hover {
+    opacity: 1;
+    cursor: pointer;
+}
+
+.card-menu-dots-bg-fill {
+    background-color: var(--background);
+    opacity: 1;
+}
