--- a/src/components/DropdownMenu.css
+++ b/src/components/DropdownMenu.css
@@ -12,7 +12,7 @@ li {
   display: flex;
   align-items: center;
   gap: 14px;
-  padding: 10px;
+  padding: 8px 20px 8px 15px;
   border-radius: 10px;
   font-size: 16px;
 }
@@ -32,7 +32,7 @@ li:hover {
   box-shadow: rgba(33, 33, 33, 0.35) 0px 0px 15px;
   transition: all linear 0.3s;
   position: absolute;
-  margin-left: -148px;
+  margin-left: -162px;
   z-index: 100;
   border-radius: 10px;
   padding: 10px;
