--- a/src/components/TaskMenu.css
+++ b/src/components/TaskMenu.css
@@ -6,7 +6,7 @@
   z-index: 100;
   border-radius: 10px;
   padding: 8px;
-  margin-left: -205px;
+  margin-left: -202px;
   margin-top: -30px;
 }
 
@@ -52,4 +52,8 @@
 
 .menu-background-display {
   display: block !important;
+}
+
+a {
+  color: var(--text-colour);
 }
