--- a/src/components/TaskMenu.css
+++ b/src/components/TaskMenu.css
@@ -1,24 +1,27 @@
 .task-dropdown-menu {
   background-color: var(--background);
+  border: solid 3px var(--accent-2);
   box-shadow: rgba(54, 54, 54, 0.35) 0px 0px 15px;
   transition: all linear 0.3s;
   position: absolute;
   z-index: 100;
   border-radius: 10px;
-  padding: 8px;
-  margin-left: -202px;
+  padding: 8px 0px 8px 0px;
+  /* padding: 8px; */
+  margin-left: -203px;
   margin-top: -30px;
+
 }
 
-.task-dropdown-icons{
+.task-dropdown-icons {
   width: 16px;
   height: 16px;
 }
 
-.task-dropdown-li{
+.task-dropdown-li {
   padding: 5px;
-  padding-right: 14px;
-  padding-left: 10px;
+  padding-right: 20px;
+  padding-left: 15px;
   gap: 10px;
 }
 
@@ -28,7 +31,7 @@
   height: 0px;
 }
 
-.taskMenu img:hover{
+.taskMenu img:hover {
   cursor: pointer;
   /* background-color: var(--background); */
   /* border-radius: 3px; */
@@ -48,6 +51,8 @@
   /* background-color: var(--background) !important; */
   background-color: var(--background) !important;
   opacity: 1;
+  border: solid 3px var(--accent-2);
+  padding: 0px !important;
 }
 
 .menu-background-display {
@@ -56,4 +61,37 @@
 
 a {
   color: var(--text-colour);
+}
+
+
+
+@keyframes fadeIn {
+  0% {
+    transform: translateX(10%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+.fadeIn-animation {
+  animation: 300ms fadeIn;
+}
+
+
+@keyframes fadeUp {
+  0% {
+    transform: translateY(10%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+.fadeUp-animation {
+  animation: 600ms fadeUp;
 }
