add board emoji picker functionality

--- a/src/components/BoardList.css
+++ b/src/components/BoardList.css
@@ -60,3 +60,9 @@
     background-color: rgb(86, 86, 86);
     opacity: 1;
 }
+
+.board-list-text-emoji-wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
