--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -38,9 +38,10 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 25px;
+    gap: 20px;
     margin-top: 10px;
     flex-grow: 1;
+    /* position: relative; */
 }
 
 .board-actions-wrapper {
@@ -62,7 +63,7 @@
     /* opacity: 0.7; */
 }
 
-.edit-icon:hover, .delete-icon:hover, .clear-icon:hover {
+.edit-icon:hover, .delete-icon:hover, .clear-icon:hover, .emoji-icon:hover {
     /* opacity: 1; */
     /* -webkit-animation-name: bulge; */
     /* -webkit-animation-duration: 1s;
@@ -84,4 +85,31 @@
     width: 27px;
     transition-duration: 100ms;
     margin-left: -2px;
+}
+
+.board-emoji-picker-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--foreground);
+    padding: 8px 15px 8px 15px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.board-emoji-wrapper {
+    position: absolute !important;
+    z-index: 2001;
+    margin-top: 500px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.emoji-icon {
+    transition-duration: 100ms;
+    width: 25px;
+    font-size: 20px;
+}
+
+.emoji-highlight {
+    background-color: var(--text-colour);
 }
