--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -15,7 +15,7 @@
 .task-container:hover textarea{
     /* opacity: 0.6; */
     background-color: var(--background);
-    transition-duration: 500ms;
+    /* transition-duration: 500ms; */
 }
 
 .task-textarea-box {
