--- a/src/components/ThemeCard.css
+++ b/src/components/ThemeCard.css
@@ -10,12 +10,13 @@
     /* flex-basis: 48%; */
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     position: relative;
-
+    transition-duration: 400ms;
 }
 
 .theme-card-wrapper:hover, .selected-wrapper:hover {
-    opacity: 0.7;
+    /* opacity: 0.7; */
     cursor: pointer;
+    transform: translateY(-5px);
 }
 
 .theme-card-wrapper h2 {
