--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -76,6 +76,7 @@ hr {
     border-top: 1px solid var(--text-colour);
     opacity: 0.5;
     margin-bottom: 20px;
+    margin-top: 10px;
     width: 95%;
 }
 
@@ -121,10 +122,11 @@ hr {
     width: 100%;
     font-family: CircularBold;
     font-size: 25px;
-    margin: 0;
-    padding-left: 20px;
-    padding-top: 20px;
-    padding-bottom: 10px;
+    margin-left: 4px;
+    /* margin: 0; */
+    /* padding-left: 10px; */
+    padding-top: 14px;
+    /* padding-bottom: 10px; */
 }
 
 .edit-title-input:focus {
@@ -159,6 +161,33 @@ hr {
 .card-menu-dots-bg-fill {
     background-color: var(--background);
     opacity: 1;
-    border: solid 2px var(--accent-2);
-    padding: 3px !important;
+    /* border: solid 2px var(--accent-2); */
+    /* padding: 3px !important; */
+}
+
+.card-emoji-picker-wrapper {
+    /* width: 30px; */
+    /* background-color: var(--background); */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    margin-left: 12px;
+    margin-top: 12px;
+    /* display: none; */
+}
+
+.card-emoji-picker-wrapper:hover {
+    background-color: var(--text-colour);
+    /* background-color: var(--background); */
+    /* background-color: transparent; */
+    cursor: pointer;
+}
+
+.card-emoji-icon {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 24px;
+    padding: 4px;
 }
