--- a/src/components/CardList.css
+++ b/src/components/CardList.css
@@ -26,9 +26,11 @@
     flex-grow: 1;
     /* flex-basis: 48%; */
     flex-basis: 30%;
+    transition-duration: 400ms;
 }
 
 #addCardButton:hover {
     background-color: rgb(86, 86, 86);
     opacity: 1;
+    cursor: pointer;
 }
