--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -119,3 +119,14 @@
 .emoji-highlight-dark {
     background-color: var(--background);
 }
+
+.transparent_gradient {
+    display: block;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 45px;
+    background: linear-gradient(180deg, transparent 0, var(--background) 100%);
+    z-index: 2000;
+}
