--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -9,7 +9,8 @@
 }
 
 .home-page-content-sub-wrapper {
-    margin-top: 140px;
+    margin-top: 100px;
+    margin-bottom: 100px;
     flex-grow: 1;
 }
 
