--- a/src/components/TargetSetter.css
+++ b/src/components/TargetSetter.css
@@ -1,11 +1,12 @@
 .set-targets-wrapper {
     display: flex;
     flex-direction: column;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
 }
 
-.settings-headers {
-    font-size: 24px;
+.target-setter-header {
+    margin: 10px 0px 15px 0px;
+    text-align: center;
 }
 
 .settings-line {
@@ -30,30 +31,7 @@
     flex-direction: column;
     font-size: 18px;
     gap: 15px;
-}
-
-.set-targets-board-select-wrapper label {
-    /* width: 200px; */
-    margin: auto;
-}
-
-.set-targets-board-select-wrapper label {
-    display: flex;
-    flex-direction: column;
-    font-size: 18px;
-    gap: 15px;
-}
-
-.set-targets-board-select {
-    padding: 10px;
-    font-size: 18px;
-    background-color: var(--foreground);
-    color: var(--text-colour);
-    border: none;
-    margin: auto;
-    border-radius: 10px;
     text-align: center;
-    cursor: pointer;
 }
 
 .set-targets-input {
@@ -63,7 +41,7 @@
     text-align: center;
     border-radius: 10px;
     border: none;
-    background-color: var(--foreground);
+    background-color: var(--background);
     color: var(--text-colour);
 }
 
@@ -73,28 +51,26 @@
     box-shadow: 0 0 0 1px var(--accent);
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+}
+
 .set-targets-submit {
     width: 80px;
     margin: auto;
-    margin-top: 5px;
+    margin-top: 10px;
     padding: 8px;
-    border-radius: 30px;
+    border-radius: 10px;
     border: none;
     font-size: 14px;
     font-family: CircularBold;
     background-color: var(--accent);
     color: var(--text-colour);
+    transition-duration: 400ms;
 }
 
 .set-targets-submit:hover {
-    background-color: var(--accent);
-    -webkit-animation-duration: 1s;
-    -webkit-animation-name: bulge;
-    -webkit-animation-iteration-count: initial;
-    opacity: 0.6;
-}
-
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
+    background-color: var(--accent-2);
+    cursor: pointer;
 }
