--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
   --accent-2: var(--ph-accent-2); */
 
   color: var(--text-colour);
-  background-color: var(--background);
+  background-color: var(--background, --purple-haze-bg);
 }
 
 .smallButton {
