--- a/src/components/BoardList.css
+++ b/src/components/BoardList.css
@@ -64,7 +64,7 @@
     background-color: rgb(86, 86, 86);
     opacity: 1;
     cursor: pointer;
-    transform: translateY(-5px);
+    /* transform: translateY(-5px); */
 }
 
 .board-list-text-emoji-wrapper {
