--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,7 +6,7 @@
     width: 100vw;
     padding-top: 10px;
     padding-bottom: 10px;
-    height: 50px;
+    /* height: 50px; */
     overflow: visible;
 }
 
