further optimising code files

--- a/src/components/TaskMenu.css
+++ b/src/components/TaskMenu.css
@@ -63,6 +63,10 @@ a {
   color: var(--text-colour);
 }
 
+.task-dropdown-menu.important-menu {
+  margin-left: -220px;
+}
+
 @keyframes fadeIn {
   0% {
     transform: translateX(10%);
