--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@ button {
   }
 
   .menu-icon-mobile {
-    margin-left: 10px;
+    margin-left: 15px;
     /* margin-top: 5px; */
     width: 25px;
     height: 25px;
@@ -110,6 +110,10 @@ button {
   .home-page-content-wrapper {
     padding-left: 0px !important;
   }
+
+  .loadingWrapper {   
+    margin-left: 0px !important;
+}
 
   .boardLink {
     font-size: 22px;
