--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -113,7 +113,8 @@
 .board-emoji-wrapper {
     position: absolute !important;
     z-index: 2001;
-    margin-top: 500px;
+    margin-top: 495px;
+    margin-left: 250px;
     box-shadow: rgba(65, 65, 65, 0.35) 0px 5px 15px;
     /* border: solid var(--text-colour) 2px; */
     border-radius: 12px;
