--- a/src/components/ThemeCard.css
+++ b/src/components/ThemeCard.css
@@ -1,3 +1,15 @@
+.theme-card-outer-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 92%;
+    margin: auto;
+    align-items: stretch;
+    gap: 25px;
+    margin-top: 40px;
+    margin-bottom: 80px;
+}
+
 .theme-card-wrapper {
     background-color: var(--background);
     border-radius: 15px;
