--- a/src/components/CardList.css
+++ b/src/components/CardList.css
@@ -2,10 +2,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    width: 95%;
+    /* width: 95%; */
     /* max-width: 1600px; */
     align-items: stretch;
-    gap: 25px;
+    gap: 20px;
     margin-top: 20px;
     margin-bottom: 100px;
 }
@@ -26,6 +26,7 @@
     /* flex-basis: 48%; */
     flex-basis: 30%;
     transition-duration: 400ms;
+    height: 120px;
 }
 
 #addCardButton:hover {
