--- a/src/components/ChartList.css
+++ b/src/components/ChartList.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 95%;
-  max-width: 1600px;
+  /* width: 95%; */
+  max-width: 1400px;
   gap: 25px;
   margin: auto;
 }
@@ -13,6 +13,7 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   padding: 20px;
   border-radius: 15px;
+  flex-grow: 1;
 }
 
 .chart-list-title {
