--- a/src/components/WeeklyRoundups.css
+++ b/src/components/WeeklyRoundups.css
@@ -10,7 +10,7 @@
 }
 
 .weekly-report-card-wrapper {
-  width: 80%;
+  /* width: 80%; */
   margin: auto;
   text-align: left;
   background-color: var(--foreground);
@@ -26,7 +26,7 @@
   justify-content: center;
   gap: 10px;
   align-items: center;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 
 .weekly-report-title-wrapper>img{
