--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -6,16 +6,21 @@
     /* gap: 5px; */
 }
 
-/* .task-container:hover input[type="checkbox"]{
-    opacity: 0.6;
-    background-color: var(--accent-2);
-    border-color: var(--text-colour);
-} */
+.task-container > textarea {
+    /* opacity: 0.8; */
+}
+
+.task-container:hover input[type="checkbox"]{
+    /* opacity: 0.6;
+    background-color: var(--accent-2); */
+    /* border-color: var(--accent-2); */
+}
 
 .task-container:hover textarea{
     /* opacity: 0.6; */
-    background-color: var(--background);
+    /* background-color: var(--background); */
     /* transition-duration: 500ms; */
+    /* opacity: 1; */
 }
 
 .task-textarea-box {
@@ -148,4 +153,19 @@ input[type="checkbox"]:disabled {
 input[type="checkbox"]:hover {
     background-color: var(--accent) !important;
     opacity: 1 !important;
+}
+
+.task-hover-indicator {
+    width: 20px;
+    height: 11px;
+    position: relative;
+    margin-left: -22px;
+    margin-top: 4px;
+    margin-right: 2px;
+    display: none;
+    opacity: 0.7;
+}
+
+.task-container:hover .task-hover-indicator{
+    display: block;
 }
