--- a/src/components/TargetSetter.css
+++ b/src/components/TargetSetter.css
@@ -12,6 +12,7 @@
 .settings-line {
     border-color: rgba(255, 255, 255, 0.256);
     width: 80%;
+    max-width: 900px;
 }
 
 .set-targets-wrapper>form {
