--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -64,7 +64,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 25px;
+    gap: 22px;
     background-color: var(--foreground);
     padding: 10px 15px 10px 15px;
     border-radius: 10px;
@@ -74,7 +74,8 @@
 .edit-icon {
     width: 28px;
     height: 28px;
-    margin-top: -2px;margin-left: -15px;
+    margin-top: -3px;
+    margin-left: -16px;
     transition-duration: 100ms;
     /* opacity: 0.7; */
 }
