--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -1,16 +1,20 @@
-.wrapper {
-    /* padding-right: 20px; */
-    /* width: 98vw; */
-    /* height: 100vh; */
-}
-
 .home-page-content-wrapper {
     display: flex;
     justify-content: space-evenly;
 }
 
+.home-page-week {
+    font-size: 17px;
+    background-color: var(--accent);
+    width: 190px;
+    margin: auto;
+    border-radius: 20px;
+    padding: 1px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
 .home-page-content-sub-wrapper {
-    margin-top: 70px;
+    margin-top: 80px;
     margin-bottom: 100px;
     flex-grow: 1;
 }
@@ -23,7 +27,7 @@
 }
 
 .homePageContent {
-    margin-top: 20px;
+    margin-top: 70px;
 }
 
 .totalScore:hover {
@@ -37,7 +41,7 @@
     gap: 10px;
     margin: auto;
     margin-top: -3px;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
 }
 
 .home-page-total-score-inner-wrapper {
@@ -59,5 +63,27 @@
     background-color: var(--foreground);
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 
+.home-page-todays-tip-wrapper {
+    /* background-color: var(--foreground); */
+    border-radius: 10px;
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+    width: 70%;
+    max-width: 750px;
+    margin: auto;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+.home-page-todays-tip-quote {
+    text-align: justify;
+    font-size: 18px;
+    font-family: CircularMediumItalic
+}
+
+.home-page-todays-tip-attribution {
+    margin-top: 20px;
+    text-align: start;
+    opacity: 0.5;
 }
