--- a/src/components/ThemeCard.css
+++ b/src/components/ThemeCard.css
@@ -7,7 +7,7 @@
     align-items: stretch;
     gap: 25px;
     margin-top: 40px;
-    margin-bottom: 80px;
+    /* margin-bottom: 80px; */
 }
 
 .theme-card-wrapper {
