--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -154,5 +154,36 @@
     height: 100px;
     background: linear-gradient(180deg, transparent 0, var(--background) 100%);
     z-index: 2000;
-    pointer-events: none;   
+    pointer-events: none;
+}
+
+.board-local-sync-indicator-wrapper {
+    background-color: var(--background);
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 20000;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+}
+
+.sync-status-icon {
+    width: 30px;
+    height: 30px;
+}
+
+.spin {
+    -webkit-animation: spin 3s infinite linear;
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
 }
